aded logout functionality and write arctile page, where user can wreti a new article

--- a/Django_blog/articles/templates/articles.html
+++ b/Django_blog/articles/templates/articles.html
@@ -20,7 +20,13 @@
           <a class="nav-link" href="{% url 'register' %}">Authentication</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="{% url 'write_article'  %}">Write a article!</a>
+        </li>
+        <li class="nav-item">
+          <span class="nav-link" >Hello,  {{request.user}}</span>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
       </ul>
     </div>
