--- a/Django_blog/authentication/templates/login.html
+++ b/Django_blog/authentication/templates/login.html
@@ -10,14 +10,20 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'mainpage' %}">Home
-                <span class="sr-only">(current)</span>
-              </a>
+			<span class="sr-only">(current)</span>
+		  </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Authentication</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="{% url 'write_article'  %}">Write a article!</a>
+        </li>
+		<li class="nav-item">
+          <span class="nav-link" >Hello,  {{request.user}}</span>
+        </li>
+	    <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
       </ul>
     </div>
@@ -27,8 +33,6 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-
-
 					<h3 id="form-title">LOGIN</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
@@ -48,7 +52,7 @@
 						</div>
 
 							<div class="d-flex justify-content-center mt-3 login_container">
-								<input class="btn login_btn" type="submit" value="Login">
+								<input href="#" class="btn login_btn" type="submit" value="Login">
 							</div>
 					</form>
 
