--- a/Django_blog/articles/templates/articles.html
+++ b/Django_blog/articles/templates/articles.html
@@ -12,9 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'mainpage' %}">Home
-                <span class="sr-only">(current)</span>
-              </a>
+          <a class="nav-link" href="{% url 'mainpage' %}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'register' %}">Authentication</a>
@@ -31,20 +29,28 @@
       </ul>
     </div>
   </div>
-</nav>
-</header>
-{% for i in object_list %}
+    </nav>
+  </header>
+{% for obj in object_list %}
 <div class="bs-component d-flex justify-content-center mt-3">
   <div class="jumbotron w-75 p-3 mt-5">
-    <h1 class="display-6 text-left">{{ i.title }}</h1>
-    <p class="text-left">Date Realese: {{ i.date }} </p>
-    <p class="text-left">Author: {{ i.createdBy }} </p>
+    <h1 class="display-6 text-left">{{ obj.title }}</h1>
+    <p class="text-left">Date Realese: {{ obj.date }} </p>
+    <p class="text-left">Author: {{ obj.author }} </p>
     <hr class="my-4">
-    <p class="lead text-left">{{ i.post }}</p>
-    <p  class="text-left thumbnail">
-      <span>{{ i.likes }}&nbsp;</span>
-      <a class="fa fa-thumbs-up thumbnail text-muted" href="#" role="button"></a>
-    </p>
+    <p class="lead text-left">{{ obj.post }}</p>
+    <div  class="float-left">
+      <form action="{% url 'like_article' %}" method="POST">
+      {% csrf_token %}
+      <input type="hidden" name="article_id" value="{{ obj.id }}">
+      {% if user not in obj.liked.all %}
+        <button type="submit" class="fa fa-thumbs-up thumbnail text-muted"></button>
+      {% else %}
+        <button class="fa fa-thumbs-down thumbnail text-muted" type="submit"></button>
+      {% endif %}
+      <span>{{ obj.liked.all.count }}&nbsp</span>
+      </form>
+    </div>
   </div>
 </div>
 </div>
