--- a/Django_blog/mainpage/templates/mainpage.html
+++ b/Django_blog/mainpage/templates/mainpage.html
@@ -12,9 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="{% url 'mainpage' %}">Home
-                <span class="sr-only">(current)</span>
-              </a>
+          <a class="nav-link" href="{% url 'mainpage' %}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'register' %}">Authentication</a>
