--- a/Django_blog/articles/templates/write_article.html
+++ b/Django_blog/articles/templates/write_article.html
@@ -32,13 +32,13 @@
       </div>
     </nav>
     </header>
-    <div class="mt-5">
+    <div class="mt-5" style="height: 420px;">
         <form action="" method="POST" class="form-group pt-5">
             {% csrf_token %}
            <div class="input">
                 {{form.title}}
            </div>
-            <div class="input">
+            <div class="input" style="height: 150px;">
                 {{form.post}}
             </div>
             <button type="submit" class="btn btn-success ml-3 mt-3 col-sm-1">Send!</button>
